crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__destructuring-8.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let foo = ({a, b}) => b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..24,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 10..23,
                            params: [
                                EFnParam {
                                    pat: Object(
                                        EFnParamObjectPat {
                                            span: 11..17,
                                            props: [
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 12..13,
                                                            name: "a",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 15..16,
                                                            name: "b",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Ident(
                                Ident {
                                    span: 22..23,
                                    name: "b",
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
