crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__destructuring-9.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let foo = ({a, b}: {a: string, b: number}) => b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..48,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 10..47,
                            params: [
                                EFnParam {
                                    pat: Object(
                                        EFnParamObjectPat {
                                            span: 11..17,
                                            props: [
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 12..13,
                                                            name: "a",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 15..16,
                                                            name: "b",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    type_ann: Some(
                                        Object(
                                            ObjectType {
                                                span: 19..41,
                                                props: [
                                                    TProp {
                                                        span: 20..29,
                                                        name: "a",
                                                        optional: false,
                                                        mutable: false,
                                                        type_ann: Prim(
                                                            PrimType {
                                                                span: 23..29,
                                                                prim: Str,
                                                            },
                                                        ),
                                                    },
                                                    TProp {
                                                        span: 31..40,
                                                        name: "b",
                                                        optional: false,
                                                        mutable: false,
                                                        type_ann: Prim(
                                                            PrimType {
                                                                span: 34..40,
                                                                prim: Num,
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    ),
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Ident(
                                Ident {
                                    span: 46..47,
                                    name: "b",
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
