crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__destructuring.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let {x, y} = point\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..18,
                pattern: Object(
                    ObjectPat {
                        span: 4..10,
                        props: [
                            Assign(
                                AssignPatProp {
                                    span: 5..6,
                                    key: Ident {
                                        span: 5..6,
                                        name: "x",
                                    },
                                    value: None,
                                },
                            ),
                            Assign(
                                AssignPatProp {
                                    span: 8..9,
                                    key: Ident {
                                        span: 8..9,
                                        name: "y",
                                    },
                                    value: None,
                                },
                            ),
                        ],
                        optional: false,
                    },
                ),
                type_ann: None,
                init: Some(
                    Ident(
                        Ident {
                            span: 13..18,
                            name: "point",
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
