crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_application-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"foo(a, b)\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..9,
                expr: App(
                    App {
                        span: 0..9,
                        lam: Ident(
                            Ident {
                                span: 0..3,
                                name: "foo",
                            },
                        ),
                        args: [
                            ExprOrSpread {
                                spread: None,
                                expr: Ident(
                                    Ident {
                                        span: 4..5,
                                        name: "a",
                                    },
                                ),
                            },
                            ExprOrSpread {
                                spread: None,
                                expr: Ident(
                                    Ident {
                                        span: 7..8,
                                        name: "b",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
