crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_application-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"f(x)(g(x));\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..11,
                expr: App(
                    App {
                        span: 0..10,
                        lam: App(
                            App {
                                span: 0..4,
                                lam: Ident(
                                    Ident {
                                        span: 0..1,
                                        name: "f",
                                    },
                                ),
                                args: [
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Ident(
                                            Ident {
                                                span: 2..3,
                                                name: "x",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        args: [
                            ExprOrSpread {
                                spread: None,
                                expr: App(
                                    App {
                                        span: 5..9,
                                        lam: Ident(
                                            Ident {
                                                span: 5..6,
                                                name: "g",
                                            },
                                        ),
                                        args: [
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Ident(
                                                    Ident {
                                                        span: 7..8,
                                                        name: "x",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
