crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"() => 10;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..9,
                expr: Lambda(
                    Lambda {
                        span: 0..8,
                        params: [],
                        body: Lit(
                            Num(
                                Num {
                                    span: 6..8,
                                    value: "10",
                                },
                            ),
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
