crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_definition-3.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"(a) => \\\"hello\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..15,
                expr: Lambda(
                    Lambda {
                        span: 0..14,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 1..2,
                                        id: Ident {
                                            span: 1..2,
                                            name: "a",
                                        },
                                    },
                                ),
                                type_ann: None,
                                optional: false,
                                mutable: false,
                            },
                        ],
                        body: Lit(
                            Str(
                                Str {
                                    span: 7..14,
                                    value: "hello",
                                },
                            ),
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            },
        ],
    },
)
